css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid, .fa-regular {
    color: var(--main-color);
}

head {
	.logo {
		color: var(--main-color);
	}

	ul {
		display: flex;
		list-style: none;
	}
}
body {
    display: flex;
    justify-content: center;
    width: 100%;
    margin: 0 auto;
    padding: 0 15px;

    ul {
        display: flex;
        list-style: none;
        gap: 20px;
    }

    .booki-logo {
        padding: 0 15px;
    }
}


.flex-container {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.main-container {
    outline: 1px none; 
    margin: auto;
    max-width: 1340px;
    width: 90%;
}

.booki-logo {
    margin-top: 15px;
    margin-left: 0;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card:hover {
    filter: drop-shadow(0px 10px 8px rgba(0, 0, 0, 0.247));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.USD {
    font-weight: 700;
}

.neutralStar {
    color: var(--main-bg-color)
}

/*header*/

.search-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 15px;
    margin: 15px;
}

.search-group {
    display: flex;
}

.loc-icon {
    border-radius: 10px 0 0 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--filter-bg-color);
    height: 50px;
    width: 50px;
}

.search {
    border: 1px solid var(--main-color);
    height: 50px;
    position: relative;
    transition: border-color 0.2s ease-in-out;
    padding: 0 10px;
}

.search-button {
    background-color: var(--main-color);
    border-radius: 0 10px 10px 0;
}

.nav-buttons {
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    gap: 20px;
    padding: 0;
    background-color: none;
  }
  
  .nav-button {
    display: flex;
    gap: 10px;
    position: relative;
    background: none;
    border: none;
    cursor: pointer;
  }
  
  .nav-button::before {
    content: "";
    position: absolute;
    top: -4px;
    left: 0;
    width: 100%;
    height: 4px; 
    background-color: none;
    transform: scaleX(0); 
    transform-origin: center;
    transition: transform 0.3s ease-in-out;
  }
  
  .nav-button:hover::before {
    transform: scaleX(1); 
  }
  
  @media (max-width: 768px) {
    .nav {
      flex-direction: column;
    }
  
    .nav-buttons {
      width: 100%;
      background-color: none;
    }
  }

  .filter-list {
    display: flex;
    flex-direction: row;
    align-content: center;
    align-items: center;
    list-style-type: none;
    gap: 20px;
    padding: 0;
  }
    
.filter-list:hover {
    border: none;
    display: flex;
}



    .label {
        border: none;
    }

    .filter-list li {
        height: 50px;
		border-radius: 25px;
		background-color: var(--main-bg-color);
		display: flex;
		flex: 0 0 calc((100% / 6) - (20px * (5 / 6)));
		align-items: center;
		font-weight: 700;
		transition: all 0.3s ease-in-out;
        filter: none;

		&.label {
			border: none;
            filter: none;
            background-color: white;
		}

		&:hover {
			color: var(--brand-primary);
			cursor: pointer;
            filter: drop-shadow(0px 10px 8px rgba(0, 0, 0, 0.247));

			svg {
				transform: rotate(20deg) scale(1.1);
			}

            &.label {
                border: none;
                filter: none;
                background-color: white;
            }
		}
    }


  .icon {
	align-items: center;
	background-color: var(--brand-primary-lighter);
	border-radius: 50%;
	display: flex;
	flex-shrink: 0;
	height: 52px;
	justify-content: center;
    align-items: center;
	width: 52px;
	margin-right: 10px;
	margin-left: -2px;
	svg {
		fill: var(--brand-primary);
		height: auto;
		width: 25px;
		transition: all 0.3s ease-in-out;
	}
}

  .info {
    display: flex;
    align-items: center;
    gap: 12px;
    margin-bottom: 30px;
  }

.info-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    border: 2px solid var(--filter-bg-color);
    border-radius: 50%;
    width: 25px;
    height: 25px;
}

/****** Accommodation And Popular ***********/
.accommodation-and-popular {
    padding: 30px 0px;
}

.accom-and-pop-contents {
    display: grid;
    grid-template-columns: 3fr 2fr;
    gap: 30px;
    padding: 30px 0px;

}

@media (max-width: 1030px) {
    .accom-and-pop-contents {
      display: flex;
      flex-direction: column-reverse;
      justify-content: center;
    }
}

.accommodation-and-popular section {
    /*targets both accomidation and popular <section> elements */
    background-color: var(--main-bg-color);
    border-radius: 20px;
}

/****** Accommodation ***********/
.accommodation {
    display: flex;
    gap: 30px;
    flex-direction: column;
    padding: 30px 20px;
}

.accommodation-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.accommodation-cards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px
}

@media (max-width: 768px) {
    .accommodation-cards {
        grid-template-columns: 1fr;
    }
}

.accommodation-cards .card {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    margin: 10px;
    max-height: 210px;
    max-width: 250px;
    width: 100%;
    height: auto;
    aspect-ratio: 250 / 210;

}

@media (max-width: 1024px) {
    .cards {
      width: 355px;
      height: 210px;
    }
}

.accommodation-cards img {
    object-fit: cover;
    width: 100%;
    height: 114px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;

}
.accommodation-cards .card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
}

.accommodation-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.popular-cards .card-subtitle {
    margin: 0;
}

.popular-cards .card-rating {
    margin-bottom: 5px;
}

/****** Popular ***********/
.popular {
    display: flex;
    flex-direction: column;
    padding: 30px 30px 0 30px;
}

.popular-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.popular-cards .card {
    display: flex;
    margin-top: 33px;
    /* width: 350px */
}

.popular-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.popular-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.popular-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.popular-cards .card-subtitle {
    margin: 0;
}

.popular-cards .card-rating {
    margin-bottom: 5px;
}

/* activities */


.activity-container {

}


.activities {
    display: flex;
    flex-direction: column;
    padding: 30px;
    gap: 20px;
}

.activities-section-title {
    font-style: 20px;
}

.activities-cards {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
    filter: drop-shadow(0px 10px 8px rgba(0, 0, 0, 0.178));
    transition: box-shadow: 0.3s ease;
}

.activities-cards {
}

.activities-cards .postcard {
    background-color: rgb(255, 255, 255);
    max-width: 300px;
    border-radius: 20px;
}

.postcard:hover {
    filter: drop-shadow(0px 10px 8px rgba(0, 0, 0, 0.247));   
}

.postcard-title {
    display: flex;
    align-items: center;
    justify-content: center;
}

.postcard img {
    object-fit: cover;
    width: 100%;
    height: 85%;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    border-bottom: 150px;
}


footer {
    display: grid;
    background-color: var(--main-bg-color);
    max-width: 1340px;
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
}

.footer-container {
   
}

.footer-columns { 
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;

}

.footer-column {
    display: grid;
    padding: 0 30px 15px 30px;
}

.C-title {
    font-size: 17pt;
    font-weight: bold;
}

.list-links {
    list-style-type: none;
    padding-left: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: flex-start;
    gap: 5px;
}

.list-link {
    color: black;
    font-size: 15pt;
    text-decoration: none;
}

.list-link:hover {
    text-decoration: underline;
    color: var(--main-color);
}

